--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "diceRoller",
+  "name": "wallBot",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Custom Discord bot",
+  "main": "./src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.2.1"
+    "discord.js": "^11.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^9.6.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.1"
   }
 }
